--- a/transportes/transportesEscolaresSena/templates/transportes/base.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/base.html
@@ -60,8 +60,12 @@
                 <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
                   <li><a class="dropdown-item" href="{% url 'transportes:verLogueo' %}">Perfil</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{% url 'transportes:listarBeneficiario' %}">Beneficiario</a></li>
-
+                  {% if request.session.logueo.2 == 'C' %}
+                    <li><a class="dropdown-item" href="{% url 'transportes:listarBeneficiario' %}">Beneficiario</a></li>
+                  {% endif %}
+                  {% if request.session.logueo.2 == 'C' %}
+                    <li><a class="dropdown-item" href="{% url 'transportes:listarPeticionesCli' %}">Peticiones</a></li>
+                  {% endif %}
                   <li><a class="dropdown-item" href="{% url 'transportes:logout' %}">Sign out</a></li>
 
                 </ul>
