--- a/transportes/transportesEscolaresSena/templates/transportes/index.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/index.html
@@ -36,25 +36,28 @@
           {%for t in datos %}
             {%if t.rol == 'P'%}
               <div class="container">
-                <div class="card mb-3" style="max-width: 1200px; max-height: 1000px;" >
-                    <div class="row g-0">
-                      <div class="col-md-4">
-                        <img src="{{t.foto.url}}" class="img-fluid rounded-start" alt="...">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">{{t.nombre}} {{t.apellido}}</h5>
-                          <p class="card-text">Correo: {{t.correo}}</p>
-                          <p class="card-text">Direccion:{{t.direccion}} </p>
-                          <p class="card-text">Documento: {{t.documento}}</p>
-                          <p class="card-text">Fecha de Nacimiento: {{t.fecha_nacimiento}}</p>
-                          <p class="card-text"><small class="text-muted">Proveedor</small></p>
-                          <a href="{% url 'transportes:verUsuario' t.id %}">Ver</a>
-                        </div>
-                      </div>
-                    </div>
+
+
+                <div class="card text-center">
+                  <div class="card-header">
+                    Proveedor
                   </div>
-              </div>
+                  <div class="card-body">
+                    <h5 class="card-title">{{t.nombre}} {{t.apellido}}</h5>
+                    <p class="card-text">Correo: {{t.correo}}</p>
+                    <p class="card-text">Direccion:{{t.direccion}}</p>
+                    <p class="card-text">Documento: {{t.documento}}</p>
+                    <p class="card-text">Fecha de Nacimiento: {{t.fecha_nacimiento}}</p>
+                    <a class="btn btn-primary" href="{% url 'transportes:verUsuario' t.id %}">Ver</a>
+
+                  </div>
+                  <div class="card-footer text-muted">
+                    Transporte
+                  </div>
+                </div>
+
+
+                
             {%endif%}
 
           {%endfor%}
@@ -84,6 +87,7 @@
             </ul>
           </nav>
         </div>
+        
         <footer style="background-color: black;padding-top: 100px !important;padding-bottom: 100px !important;">
           <div class="row text-white">
               <div class="container">
