--- a/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/verUsuario.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/verUsuario.html
@@ -61,8 +61,9 @@
               <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
                 <li><a class="dropdown-item" href="{% url 'transportes:verLogueo' %}">Perfil</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="{% url 'transportes:listarBeneficiario' %}">Beneficiario</a></li>
-
+                {% if request.session.logueo.2 == 'C' %}
+                  <li><a class="dropdown-item" href="{% url 'transportes:listarBeneficiario' %}">Beneficiario</a></li>
+                {% endif %}
                 <li><a class="dropdown-item" href="{% url 'transportes:logout' %}">Sign out</a></li>
 
               </ul>
@@ -80,29 +81,28 @@
         <div class="row">
             <div class="col-md-3 border-right">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                  <img class="rounded-circle mt-5" width="150px" src="{{cli.foto.url}}">
-                  <span class="font-weight-bold">{{ cli.nombre }}</span>
-                  <span class="text-black-50">{{ cli.rol }}</span><span> </span></div>
+                  <span class="font-weight-bold"></span>
+                  <span class="text-black-50"></span><span> </span></div>
             </div>
             <div class="col-md-5 border-right">
                 <div class="p-3 py-5">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h4 class="text-right">Profile Settings</h4>
+                        <h4 class="text-right">Perfil Proveedor</h4>
                     </div>
                     <div class="row mt-2">
-                        <div class="col-md-6"><label class="labels">Name</label>
+                        <div class="col-md-6"><label class="labels">Nombre</label>
                           <input readonly type="text" class="form-control" value="{{ cli.nombre }}"></div>
-                        <div class="col-md-6"><label class="labels">Surname</label>
+                        <div class="col-md-6"><label class="labels">Apellido</label>
                           <input readonly type="text" class="form-control" value="{{ cli.apellido }}"></div>
                     </div>
                     <div class="row mt-3">
-                        <div class="col-md-12"><label class="labels">Mobile Number</label>
+                        <div class="col-md-12"><label class="labels">Documento</label>
                           <input readonly type="text" class="form-control" value="{{ cli.documento }}"></div>
-                        <div class="col-md-12"><label class="labels">Address Line 1</label>
+                        <div class="col-md-12"><label class="labels">Direccion</label>
                           <input readonly type="text" class="form-control" value="{{ cli.direccion }}"></div>
-                        <div class="col-md-12"><label class="labels">Address Line 2</label>
+                        <div class="col-md-12"><label class="labels">Correo</label>
                           <input readonly type="text" class="form-control" value="{{ cli.correo }}"></div>
-                        <div class="col-md-12"><label class="labels">Postcode</label>
+                        <div class="col-md-12"><label class="labels">Fecha de Nacimiento</label>
                           <input readonly type="text" class="form-control" value="{{ cli.fecha_nacimiento|date:'Y-m-d' }}"></div>
                     </div><br><br>
                     
@@ -122,8 +122,10 @@
                             {%endfor%}
                         
                       </table>
+                      {% if request.session.logueo.2 == 'C' %}
                       <a class="btn btn-primary" href="{% url 'transportes:registrarPeticiones' %}">Realizar Petición</a>
                       <a class="btn btn-primary" href="{% url 'transportes:registrarComentarios' %}">Realizar Comentario</a>
+                      {% endif %}
 
                 </div>
             </div>
@@ -135,9 +137,11 @@
                 <table class="table table-hover">
                       <thead>
                         <tr>
-                          <th>placa</th>
-                          <th>marca</th>
-                          <th>color</th>
+                          <th>Placa</th>
+                          <th>Marca</th>
+                          <th>Color</th>
+                          <th>Disponibilidad</th>
+
 
 
                         </tr>
@@ -146,9 +150,10 @@
                           {%for v in vehiculo %}
                           <tbody>
                             <tr>
-                              <td {% if cli.id == v.cliente.id %}{% endif %} >{{v.placa}}</td>
-                              <td {% if cli.id == v.cliente.id %}{% endif %} >{{v.marca}}</td>
-                              <td {% if cli.id == v.cliente.id %}{% endif %} >{{v.color}}</td>
+                              <td>{{v.placa}}</td>
+                              <td>{{v.marca}}</td>
+                              <td>{{v.color}}</td>
+                              <td>{{v.actual}}</td>
                             </tr>
                           </tbody>
                           {%endfor%}
