--- a/transportes/transportesEscolaresSena/templates/transportes/login/vehiculo/registrarVehiculo.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/login/vehiculo/registrarVehiculo.html
@@ -1,4 +1,4 @@
-{%extends "transportes/base.html"%}
+{%extends "transportes/base2.html"%}
 {% load static %}
 
 
@@ -11,6 +11,9 @@
     <title>Formulario Vehiculo</title>
 </head>
 <body>
+  
+    
+
     {%block contenedor%}
     <h3>Agregar Vehiculo</h3>
     <form action="{%url 'transportes:guardarVehiculo'%}" method="post" enctype="multipart/form-data">
@@ -27,7 +30,6 @@
         </div>
        
           <div class="mb-3 mt-3">
-            
             <label for="" class="form-label">placa:</label>
             <input type="text" class="form-control" id="" placeholder="Ingrese " name="placa">
           </div>
@@ -39,8 +41,15 @@
             <label for="" class="form-label">color:</label>
             <input type="text" class="form-control" id="" placeholder="Ingrese " name="color">
           </div>
-          <label>Foto</label>
-          <input type="file" name="foto" class="form-control" accept="image/*" /><br>
+          <div class="mb-3 mt-3">
+            <label for="" class="form-label">Capacidad:</label>
+            <input type="number" class="form-control" id="" placeholder="Ingrese " name="capacidad">
+          </div>
+          <div class="mb-3 mt-3">
+            <label for="" class="form-label">Disponibilidad actual:</label>
+            <input type="number" class="form-control" id=""  placeholder="Ingrese " name="actual">
+          </div>
+     
           
          
         
